# sleep-sound-analyzer

./: .gitignore  LICENSE  README.md  app.py  mcp.example.json  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  test_analyzer.py
docs/: PRD.md
src/: __init__.py  analyzer.py  classifier.py  config.py  feature_extractor.py  preprocessor.py  scoring.py  trends.py  yamnet_classifier.py
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: conftest.py  test_backend_fallback.py  test_config_wiring.py  test_frame_times.py  test_mcp_server.py  test_merge_events.py  test_pipeline.py  test_scoring_trends.py  test_statistics.py  test_suggestions.py
